Projeto pokedex finalizado

--- a/src/config-scss/variables.scss
+++ b/src/config-scss/variables.scss
@@ -1,6 +1,7 @@
-:root{
-  --branco: #FFF;
+:root {
+	--branco: #fff;
+	--cinza: #efefef;
 
-  --Primary-color: #262835;
-  --Secondary-color: #FF5473;
+	--primary-color: #262835;
+	--secondary-color: #ff5473;
 }
